Seções criadas/ url times recebendo corretamente mas não tratada

--- a/painel/central/templates/central/includes/sidebar.html
+++ b/painel/central/templates/central/includes/sidebar.html
@@ -14,45 +14,39 @@
             <!-- Left Menu Start -->
             <ul class="list-unstyled" id="side-menu">
                 <li>
-                    <a href="{% url 'dashboard' %}" class="waves-effect d-flex align-items-center">
-                        <i class="material-icons">home</i> <!-- Ícone da página inicial -->
+                    <a href="{% url 'pagina_inicial' %}" class="waves-effect d-flex align-items-center">
+                        <i class="material-icons">home</i>
                         <span>Página Inicial</span>
                     </a>
                 </li>
                 <li>
-                    <a href="#" class="waves-effect d-flex align-items-center">
-                        <i class="material-icons">star</i> <!-- Ícone dos recomendados -->
+                    <a href="{% url 'recomendados' %}" class="waves-effect d-flex align-items-center">
+                        <i class="material-icons">star</i>
                         <span>Recomendados</span>
                     </a>
                 </li>
                 <li>
-                    <a href="#" class="waves-effect d-flex align-items-center">
-                        <i class="material-icons">favorite</i> <!-- Ícone dos favoritos -->
+                    <a href="{% url 'favoritos' %}" class="waves-effect d-flex align-items-center">
+                        <i class="material-icons">favorite</i>
                         <span>Favoritos</span>
                     </a>
                 </li>
                 <li>
-                    <a href="#" class="waves-effect d-flex align-items-center">
-                        <i class="material-icons">sports_esports</i> <!-- Ícone da lista de jogos -->
+                    <a href="{% url 'lista_jogos' %}" class="waves-effect d-flex align-items-center">
+                        <i class="material-icons">sports_esports</i>
                         <span>Lista de Jogos</span>
                     </a>
                 </li>
                 <li>
-                    <a href="#" class="waves-effect d-flex align-items-center">
-                        <i class="material-icons">emoji_events</i> <!-- Ícone da lista de ligas -->
+                    <a href="{% url 'lista_ligas' %}" class="waves-effect d-flex align-items-center">
+                        <i class="material-icons">emoji_events</i>
                         <span>Lista de Ligas</span>
                     </a>
                 </li>
                 <li>
-                    <a href="#" class="waves-effect d-flex align-items-center">
-                        <i class="material-icons">shield</i> <!-- Ícone da lista de times -->
+                    <a href="{% url 'lista_times' %}" class="waves-effect d-flex align-items-center">
+                        <i class="material-icons">shield</i>
                         <span>Lista de Times</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="#" class="waves-effect d-flex align-items-center">
-                        <i class="material-icons">settings</i> <!-- Ícone de configurações -->
-                        <span>Configurações</span>
                     </a>
                 </li>
             </ul>
